==> TomCC7/learning/stm32/野火开源图书/[野火]《STM32 HAL库开发实战指南》/HAL_配套代码/27-液晶显示中英文/4.3寸电容屏/2-液晶显示中英文（任意大小）/User/lcd/bsp_nt35510_lcd.c <==
#include "./lcd/bsp_nt35510_lcd.h"
#include "./font/fonts.h"

static void NT35510_GPIO_Config ( void )
{
	GPIO_InitTypeDef GPIO_Initure;
  
      /* Enable GPIOs clock */
  __HAL_RCC_GPIOD_CLK_ENABLE();
  __HAL_RCC_GPIOE_CLK_ENABLE();
  __HAL_RCC_GPIOF_CLK_ENABLE();
  __HAL_RCC_GPIOG_CLK_ENABLE();
  __HAL_RCC_FSMC_CLK_ENABLE();			//使能FSMC时钟
  
    /* Common GPIO configuration */
  GPIO_Initure.Mode      = GPIO_MODE_OUTPUT_PP;  //推挽输出
  GPIO_Initure.Pull      = GPIO_PULLUP;
  GPIO_Initure.Speed     = GPIO_SPEED_FREQ_HIGH;

  /* 背光引脚 */
	GPIO_Initure.Pin=GPIO_PIN_12;
	HAL_GPIO_Init(GPIOD,&GPIO_Initure);
  
  //初始化复位引脚
	GPIO_Initure.Pin=GPIO_PIN_1;
	HAL_GPIO_Init(GPIOE,&GPIO_Initure);
  
  GPIO_Initure.Mode=GPIO_MODE_AF_PP; 
//  GPIO_Initure.Alternate=GPIO_AF12_FSMC;	//复用为FSMC
  
	//初始化PD0,1,4,5,8,9,10,14,15
	GPIO_Initure.Pin=GPIO_PIN_0|GPIO_PIN_1|GPIO_PIN_4|GPIO_PIN_5|GPIO_PIN_8|\
					         GPIO_PIN_7|GPIO_PIN_9|GPIO_PIN_10|GPIO_PIN_11|GPIO_PIN_14|GPIO_PIN_15; 
  HAL_GPIO_Init(GPIOD, &GPIO_Initure);
  
  	//初始化PE2,7,8,9,10,11,12,13,14,15
	GPIO_Initure.Pin=GPIO_PIN_2|GPIO_PIN_7|GPIO_PIN_8|GPIO_PIN_9|GPIO_PIN_10|GPIO_PIN_11|\
                     GPIO_PIN_12|GPIO_PIN_13|GPIO_PIN_14|GPIO_PIN_15;
	HAL_GPIO_Init(GPIOE,&GPIO_Initure);

	//初始化G12,FSMC_NE*
//  GPIO_Initure.Pin=GPIO_PIN_7;
//	HAL_GPIO_Init(GPIOD,&GPIO_Initure);

}

static void NT35510_FSMC_Config ( void )
{
	SRAM_Handler.Instance = FSMC_NORSRAM_DEVICE;
   SRAM_Handler.Extended = FSMC_NORSRAM_EXTENDED_DEVICE;
  
  /* SRAM device configuration */  
	readWriteTiming.AddressSetupTime = 0x01;	 //地址建立时间（ADDSET）为2个HCLK 1/36M=27ns
	readWriteTiming.AddressHoldTime = 0x00;	 //地址保持时间（ADDHLD）模式A未用到	
	readWriteTiming.DataSetupTime = 0x0f;		 // 数据保存时间为16个HCLK,因为液晶驱动IC的读数据的时候，速度不能太快，尤其对1289这个IC。
	readWriteTiming.BusTurnAroundDuration = 0x00;
	readWriteTiming.CLKDivision = 0x00;
	readWriteTiming.DataLatency = 0x00;
	readWriteTiming.AccessMode = FSMC_ACCESS_MODE_A;	 //模式A 	

	writeTiming.AddressSetupTime = 0x00;	 //地址建立时间（ADDSET）为1个HCLK  
	writeTiming.AddressHoldTime = 0x00;	 //地址保持时间（A		
	writeTiming.DataSetupTime = 0x03;		 ////数据保存时间为4个HCLK	
	writeTiming.BusTurnAroundDuration = 0x00;
	writeTiming.CLKDivision = 0x00;
	writeTiming.DataLatency = 0x00;
	writeTiming.AccessMode = FSMC_ACCESS_MODE_A;	 //模式A  
 
  SRAM_Handler.Init.NSBank=FSMC_Bank1_NORSRAMx    ;     					        //使用NE4
	SRAM_Handler.Init.DataAddressMux=FSMC_DATA_ADDRESS_MUX_DISABLE; 	//地址/数据线不复用
	SRAM_Handler.Init.MemoryType=FSMC_MEMORY_TYPE_SRAM;   				       //NOR
	SRAM_Handler.Init.MemoryDataWidth=FSMC_NORSRAM_MEM_BUS_WIDTH_16; 	//16位数据宽度
	SRAM_Handler.Init.BurstAccessMode=FSMC_BURST_ACCESS_MODE_DISABLE; //是否使能突发访问,仅对同步突发存储器有效,此处未用到
	SRAM_Handler.Init.WaitSignalPolarity=FSMC_WAIT_SIGNAL_POLARITY_LOW;//等待信号的极性,仅在突发模式访问下有用
	SRAM_Handler.Init.WaitSignalActive=FSMC_WAIT_TIMING_BEFORE_WS;   	//存储器是在等待周期之前的一个时钟周期还是等待周期期间使能NWAIT
	SRAM_Handler.Init.WriteOperation=FSMC_WRITE_OPERATION_ENABLE;    	//存储器写使能
	SRAM_Handler.Init.WaitSignal=FSMC_WAIT_SIGNAL_DISABLE;           	//等待使能位,此处未用到
	SRAM_Handler.Init.ExtendedMode=FSMC_EXTENDED_MODE_ENABLE;        	//读写使用相同的时序
	SRAM_Handler.Init.AsynchronousWait=FSMC_ASYNCHRONOUS_WAIT_DISABLE;	//是否使能同步传输模式下的等待信号,此处未用到
	SRAM_Handler.Init.WriteBurst=FSMC_WRITE_BURST_DISABLE;           	  //禁止突发写
  
  /* SRAM controller initialization */
//   NT35510_GPIO_Config();
  HAL_SRAM_Init(& SRAM_Handler, &readWriteTiming, &writeTiming);
		
}

void  NT35510_BackLed_Control ( FunctionalState enumState )
{
	if ( enumState )
  {
    digitalH( GPIOD, GPIO_PIN_12);	
  }
	else
  {
    digitalL( GPIOD, GPIO_PIN_12);
  }		
}

void NT35510_Rst( void )
{			
	digitalH( GPIOE,GPIO_PIN_1);		 	 

	NT35510_Delay ( 0xAFF ); 	 
	
	digitalL( GPIOE,GPIO_PIN_1);	 //低电平复位

	NT35510_Delay ( 0xAFF ); 						   

	digitalH( GPIOE,GPIO_PIN_1);		 	 

	NT35510_Delay ( 0xAFF ); 	 	
	
}
