==> TomCC7/learning/stm32/野火开源图书/[野火]《STM32库开发实战指南》/标准库_配套代码/液晶显示-4.3寸/4-液晶显示中英文（字库在SD卡）-4.3寸/User/lcd/bsp_nt35510_lcd.c <==
#include "./lcd/bsp_nt35510_lcd.h"
#include "./font/fonts.h"

static void NT35510_GPIO_Config ( void )
{
	GPIO_InitTypeDef GPIO_InitStructure;

	/* 使能FSMC对应相应管脚时钟*/
	RCC_APB2PeriphClockCmd ( 	
													/*控制信号*/
													NT35510_CS_CLK|NT35510_DC_CLK|NT35510_WR_CLK|
													NT35510_RD_CLK	|NT35510_BK_CLK|NT35510_RST_CLK|
													/*数据信号*/
													NT35510_D0_CLK|NT35510_D1_CLK|	NT35510_D2_CLK | 
													NT35510_D3_CLK | NT35510_D4_CLK|NT35510_D5_CLK|
													NT35510_D6_CLK | NT35510_D7_CLK|NT35510_D8_CLK|
													NT35510_D9_CLK | NT35510_D10_CLK|NT35510_D11_CLK|
													NT35510_D12_CLK | NT35510_D13_CLK|NT35510_D14_CLK|
													NT35510_D15_CLK	, ENABLE );
		
	
	/* 配置FSMC相对应的数据线,FSMC-D0~D15 */	
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;

    GPIO_InitStructure.GPIO_Pin = NT35510_D0_PIN; 
    GPIO_Init(NT35510_D0_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = NT35510_D1_PIN; 
    GPIO_Init(NT35510_D1_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = NT35510_D2_PIN; 
    GPIO_Init(NT35510_D2_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = NT35510_D3_PIN; 
    GPIO_Init(NT35510_D3_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = NT35510_D4_PIN; 
    GPIO_Init(NT35510_D4_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = NT35510_D5_PIN; 
    GPIO_Init(NT35510_D5_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = NT35510_D6_PIN; 
    GPIO_Init(NT35510_D6_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = NT35510_D7_PIN; 
    GPIO_Init(NT35510_D7_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = NT35510_D8_PIN; 
    GPIO_Init(NT35510_D8_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = NT35510_D9_PIN; 
    GPIO_Init(NT35510_D9_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = NT35510_D10_PIN; 
    GPIO_Init(NT35510_D10_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = NT35510_D11_PIN; 
    GPIO_Init(NT35510_D11_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = NT35510_D12_PIN; 
    GPIO_Init(NT35510_D12_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = NT35510_D13_PIN; 
    GPIO_Init(NT35510_D13_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = NT35510_D14_PIN; 
    GPIO_Init(NT35510_D14_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = NT35510_D15_PIN; 
    GPIO_Init(NT35510_D15_PORT, &GPIO_InitStructure);

	/* 配置FSMC相对应的控制线
	 * FSMC_NOE   :LCD-RD
	 * FSMC_NWE   :LCD-WR
	 * FSMC_NE1   :LCD-CS
	 * FSMC_A0    :LCD-DC
	 */
    GPIO_InitStructure.GPIO_Pin = NT35510_RD_PIN; 
    GPIO_Init(NT35510_RD_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = NT35510_WR_PIN; 
    GPIO_Init(NT35510_WR_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = NT35510_CS_PIN; 
    GPIO_Init(NT35510_CS_PORT, &GPIO_InitStructure);    

    GPIO_InitStructure.GPIO_Pin = NT35510_DC_PIN; 
    GPIO_Init(NT35510_DC_PORT, &GPIO_InitStructure);
	

  /* 配置LCD复位RST控制管脚*/
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	
	GPIO_InitStructure.GPIO_Pin = NT35510_RST_PIN; 
	GPIO_Init ( NT35510_RST_PORT, & GPIO_InitStructure );
		
	/* 配置LCD背光控制管脚BK*/
	GPIO_InitStructure.GPIO_Pin = NT35510_BK_PIN; 
	GPIO_Init ( NT35510_BK_PORT, & GPIO_InitStructure );
	
}

static void NT35510_FSMC_Config ( void )
{
	FSMC_NORSRAMInitTypeDef  FSMC_NORSRAMInitStructure;
	FSMC_NORSRAMTimingInitTypeDef  readWriteTiming; 	
	
	/* 使能FSMC时钟*/
	RCC_AHBPeriphClockCmd(RCC_AHBPeriph_FSMC,ENABLE);

	//地址建立时间（ADDSET）为1个HCLK 5/168M=30ns
	readWriteTiming.FSMC_AddressSetupTime      = 0x01;	 //地址建立时间
	//数据保持时间（DATAST）+ 1个HCLK = 12/168M=72ns	
	readWriteTiming.FSMC_DataSetupTime         = 0x04;	 //数据建立时间
	//选择控制的模式
	//模式B,异步NOR FLASH模式，与NT35510的8080时序匹配
	readWriteTiming.FSMC_AccessMode            = FSMC_AccessMode_B;	
	
	/*以下配置与模式B无关*/
	//地址保持时间（ADDHLD）模式A未用到
	readWriteTiming.FSMC_AddressHoldTime       = 0x00;	 //地址保持时间
	//设置总线转换周期，仅用于复用模式的NOR操作
	readWriteTiming.FSMC_BusTurnAroundDuration = 0x00;
	//设置时钟分频，仅用于同步类型的存储器
	readWriteTiming.FSMC_CLKDivision           = 0x00;
	//数据保持时间，仅用于同步型的NOR	
	readWriteTiming.FSMC_DataLatency           = 0x00;	

	
	FSMC_NORSRAMInitStructure.FSMC_Bank                  = FSMC_Bank1_NORSRAMx;
	FSMC_NORSRAMInitStructure.FSMC_DataAddressMux        = FSMC_DataAddressMux_Disable;
	FSMC_NORSRAMInitStructure.FSMC_MemoryType            = FSMC_MemoryType_NOR;
	FSMC_NORSRAMInitStructure.FSMC_MemoryDataWidth       = FSMC_MemoryDataWidth_16b;
	FSMC_NORSRAMInitStructure.FSMC_BurstAccessMode       = FSMC_BurstAccessMode_Disable;
	FSMC_NORSRAMInitStructure.FSMC_WaitSignalPolarity    = FSMC_WaitSignalPolarity_Low;
	FSMC_NORSRAMInitStructure.FSMC_WrapMode              = FSMC_WrapMode_Disable;
	FSMC_NORSRAMInitStructure.FSMC_WaitSignalActive      = FSMC_WaitSignalActive_BeforeWaitState;
	FSMC_NORSRAMInitStructure.FSMC_WriteOperation        = FSMC_WriteOperation_Enable;
	FSMC_NORSRAMInitStructure.FSMC_WaitSignal            = FSMC_WaitSignal_Disable;
	FSMC_NORSRAMInitStructure.FSMC_ExtendedMode          = FSMC_ExtendedMode_Disable;
	FSMC_NORSRAMInitStructure.FSMC_WriteBurst            = FSMC_WriteBurst_Disable;
	FSMC_NORSRAMInitStructure.FSMC_ReadWriteTimingStruct = &readWriteTiming;
	FSMC_NORSRAMInitStructure.FSMC_WriteTimingStruct     = &readWriteTiming;  
	
	FSMC_NORSRAMInit ( & FSMC_NORSRAMInitStructure ); 
	
	
	/* 使能 FSMC_Bank1_NORSRAM3 */
	FSMC_NORSRAMCmd ( FSMC_Bank1_NORSRAMx, ENABLE );  
		
	
}

void  NT35510_BackLed_Control ( FunctionalState enumState )
{
	if ( enumState )
		 GPIO_SetBits( NT35510_BK_PORT, NT35510_BK_PIN );	
	else
		 GPIO_ResetBits( NT35510_BK_PORT, NT35510_BK_PIN );
}

void NT35510_Rst( void )
{			
	GPIO_SetBits ( NT35510_RST_PORT, NT35510_RST_PIN );		 	 

	NT35510_Delay ( 0xAFF ); 	
	
	GPIO_ResetBits ( NT35510_RST_PORT, NT35510_RST_PIN );	 //低电平复位

	NT35510_Delay ( 0xAFF ); 	

	GPIO_SetBits ( NT35510_RST_PORT, NT35510_RST_PIN );		 	 

	NT35510_Delay ( 0xAFF ); 	
}
